--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
     <title>Baper Bank</title>
 </head>
 <body>
-    <header>
+    <header class="container mx-auto px-4">
         <h1 class="text-5xl text-center mt-16 bg-gradient-to-r from-cyan-500 to-blue-500 p-8 rounded-3xl">Welcome to my <span class="font-bold text-pink-700">Baper Bank</span> !!!</h1>
     </header>
+    <!-- main start -->
+    <main>
+        <section class="w-3/4 bg-lime-500 text-center mx-auto px-4 my-8">
+            <h3 class="text-2xl py-5">Login information</h3>
+            <form action="" class="pb-5 text-center w-5/5">
+                <input type="email" name="" id="" placeholder="Enter Your Email" class="px-3 w-2/4 border border-gray-700 rounded mb-4 block">
+                <input type="password" name="" id="" placeholder="Enter Your Password" class="px-3 w-2/4 border border-gray-700 rounded mb-4 block">
+            </form>
+        </section>
+    </main>
     <script src="./js/bank.js"></script>
 </body>
 </html>
