--- a/index.html
+++ b/index.html
@@ -14,12 +14,13 @@
     </header>
     <!-- main start -->
     <main>
-        <section class="w-3/4 bg-lime-500 text-center mx-auto px-4 my-8">
-            <h3 class="text-2xl py-5">Login information</h3>
-            <form action="" class="pb-5 text-center w-5/5">
-                <input type="email" name="" id="" placeholder="Enter Your Email" class="px-3 w-2/4 border border-gray-700 rounded mb-4 block">
-                <input type="password" name="" id="" placeholder="Enter Your Password" class="px-3 w-2/4 border border-gray-700 rounded mb-4 block">
-            </form>
+        <section class="w-3/4 bg-black text-center mx-auto my-8 rounded">
+            <h3 class="text-3xl py-3 font-bold text-pink-500">Login information</h3>
+            <div class="pb-5">
+                <input type="email" name="" id="" placeholder="Enter Your Email" class="px-3 mx-auto w-2/4 border border-gray-700 rounded mb-4 block">
+                <input type="password" name="" id="" placeholder="Enter Your Password" class="px-3 mx-auto w-2/4 border border-gray-700 rounded mb-4 block">
+                <button onclick="submit()" type="submit" class="w-2/4 bg-emerald-600 text-xl px-5 py-2 text-white font-medium rounded">Submit</button>
+            </div>
         </section>
     </main>
     <script src="./js/bank.js"></script>
