--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
         <section class="w-3/4 bg-black text-center mx-auto my-8 rounded">
             <h3 class="text-3xl py-3 font-bold text-pink-500">Login information</h3>
             <div class="pb-5">
-                <input type="email" name="" id="" placeholder="Enter Your Email" class="px-3 mx-auto w-2/4 border border-gray-700 rounded mb-4 block">
-                <input type="password" name="" id="" placeholder="Enter Your Password" class="px-3 mx-auto w-2/4 border border-gray-700 rounded mb-4 block">
+                <input type="email" name="" id="user-email" placeholder="Enter Your Email" class="px-3 mx-auto w-2/4 border border-gray-700 rounded mb-4 block">
+                <input type="password" name="" id="user-password" placeholder="Enter Your Password" class="px-3 mx-auto w-2/4 border border-gray-700 rounded mb-4 block">
                 <button onclick="submit()" type="submit" class="w-2/4 bg-emerald-600 text-xl px-5 py-2 text-white font-medium rounded">Submit</button>
             </div>
         </section>
