add a new section for money transition

--- a/bank.html
+++ b/bank.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- tailwind cdn  -->
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Internal Document</title>
 </head>
 <body>
-    <h1>Welcome to your Baper Bank !!! You are a valid son of your father.</h1>
+    <header class="container mx-auto mt-16">
+        <h1 class="text-3xl text-center font-bold">You are a valid son of your father. <br> If you want to take <span class="uppercase text-rose-500">some money</span> would you.</h1>
+    </header>
+    <main>
+        <section class="mt-8 container mx-auto">
+            <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto">
+                <div class="bg-blue-400 px-8 py-4 rounded text-center font-bold text-white">
+                    <h3 class="text-2xl"> Deposit</h3>
+                    <h4 class="text-4xl">$25</h4>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
