grid column setup done

--- a/bank.html
+++ b/bank.html
@@ -16,7 +16,15 @@
         <section class="mt-8 container mx-auto">
             <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto">
                 <div class="bg-blue-400 px-8 py-4 rounded text-center font-bold text-white">
-                    <h3 class="text-2xl"> Deposit</h3>
+                    <h3 class="text-2xl">Deposit</h3>
+                    <h4 class="text-4xl">$25</h4>
+                </div>
+                <div class="bg-rose-400 px-8 py-4 rounded text-center font-bold text-white">
+                    <h3 class="text-2xl">Withdeaw</h3>
+                    <h4 class="text-4xl">$25</h4>
+                </div>
+                <div class="bg-teal-400 px-8 py-4 rounded text-center font-bold text-white">
+                    <h3 class="text-2xl">Balance</h3>
                     <h4 class="text-4xl">$25</h4>
                 </div>
             </div>
