--- a/bank.html
+++ b/bank.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Internal Document</title>
     <!-- tailwind cdn  -->
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Internal Document</title>
 </head>
 <body>
     <header class="container mx-auto mt-16">
         <h1 class="text-3xl text-center font-bold">You are a valid son of your father. <br> If you want to take <span class="uppercase text-rose-500">some money</span> would you.</h1>
     </header>
-    <main>
-        <section class="mt-8 container mx-auto">
-            <div class="grid grid-cols-3 gap-4 w-3/4 mx-auto">
+    <main class="container w-3/4 mx-auto">
+        <!-- // Balance an dtransection -->
+        <section class="mt-8">
+            <div class="grid grid-cols-3 gap-4">
                 <div class="bg-blue-400 px-8 py-4 rounded text-center font-bold text-white">
                     <h3 class="text-2xl">Deposit</h3>
                     <h4 class="text-4xl">$25</h4>
@@ -26,6 +27,25 @@
                 <div class="bg-teal-400 px-8 py-4 rounded text-center font-bold text-white">
                     <h3 class="text-2xl">Balance</h3>
                     <h4 class="text-4xl">$25</h4>
+                </div>
+            </div>
+        </section>
+        <!-- Deposit and Withdraw -->
+        <section class="mt-8">
+            <div class="grid grid-cols-2 gap-4">
+                <div class="bg-green-500 px-8 py-4 rounded font-bold text-black">
+                    <h3 class="text-2xl">Please Deposite</h3>
+                    <div>
+                        <input type="text" name="" id="deposite-amount" placeholder="Enter Your Amount" class="border border-gray-700 rounded my-4 px-2 w-3/4 block">
+                        <button type="submit" class=" bg-orange-600 text-lg px-4 py-1 text-white font-medium rounded">Deposite</button>
+                    </div>
+                </div>
+                <div class="bg-purple-400 px-8 py-4 rounded font-bold text-black">
+                    <h3 class="text-2xl">Please Withdraw</h3>
+                    <div>
+                        <input type="text" name="" id="withdraw-amount" placeholder="Enter Your Amount" class="border border-gray-700 rounded my-4 px-2 w-3/4 block">
+                        <button type="submit" class=" bg-emerald-600 text-lg px-4 py-1 text-white font-medium rounded">Withdraw</button>
+                    </div>
                 </div>
             </div>
         </section>
