--- a/bank.html
+++ b/bank.html
@@ -9,8 +9,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
-    <header class="container mx-auto mt-16">
-        <h1 class="text-3xl text-center font-bold">You are a valid son of your father. <br> If you want to take <span class="uppercase text-rose-500">some money</span> would you.</h1>
+    <header class="container mx-auto mt-8 bg-gradient-to-r from-indigo-500 via-purple-500 to-pink-500 w-3/4 p-5 rounded-3xl text-white leading-loose">
+        <h1 class="text-3xl text-center font-bold">You are a valid son of your father. <br> Let's get <span class="uppercase text-black">some money</span></h1>
     </header>
     <main class="container w-3/4 mx-auto">
         <!-- // Balance an dtransection -->
@@ -18,7 +18,7 @@
             <div class="grid grid-cols-3 gap-4">
                 <div class="bg-blue-400 px-8 py-4 rounded text-center font-bold text-white">
                     <h3 class="text-2xl">Deposit</h3>
-                    <h4 class="text-4xl">$25</h4>
+                    <h4 class="text-4xl">$<span id="deposit-total">00</span> </h4>
                 </div>
                 <div class="bg-rose-400 px-8 py-4 rounded text-center font-bold text-white">
                     <h3 class="text-2xl">Withdeaw</h3>
@@ -36,19 +36,20 @@
                 <div class="bg-green-500 px-8 py-4 rounded font-bold text-black">
                     <h3 class="text-2xl">Please Deposite</h3>
                     <div>
-                        <input type="text" name="" id="deposite-amount" placeholder="Enter Your Amount" class="border border-gray-700 rounded my-4 px-2 w-3/4 block">
-                        <button type="submit" class=" bg-orange-600 text-lg px-4 py-1 text-white font-medium rounded">Deposite</button>
+                        <input type="text" name="" id="deposite-input" placeholder="Enter Your Amount" class="border border-gray-700 rounded my-4 px-2 w-3/4 block">
+                        <button id="deposite-button" type="submit" class=" bg-orange-600 text-lg px-4 py-1 text-white font-medium rounded">Deposite</button>
                     </div>
                 </div>
                 <div class="bg-purple-400 px-8 py-4 rounded font-bold text-black">
                     <h3 class="text-2xl">Please Withdraw</h3>
                     <div>
-                        <input type="text" name="" id="withdraw-amount" placeholder="Enter Your Amount" class="border border-gray-700 rounded my-4 px-2 w-3/4 block">
-                        <button type="submit" class=" bg-emerald-600 text-lg px-4 py-1 text-white font-medium rounded">Withdraw</button>
+                        <input type="text" name="" id="withdraw-input" placeholder="Enter Your Amount" class="border border-gray-700 rounded my-4 px-2 w-3/4 block">
+                        <button id="withdraw-button" type="submit" class=" bg-emerald-600 text-lg px-4 py-1 text-white font-medium rounded">Withdraw</button>
                     </div>
                 </div>
             </div>
         </section>
     </main>
+    <script src="./js/banking.js"></script>
 </body>
 </html>
