--- a/bank.html
+++ b/bank.html
@@ -26,7 +26,7 @@
                 </div>
                 <div class="bg-teal-400 px-8 py-4 rounded text-center font-bold text-white">
                     <h3 class="text-2xl">Balance</h3>
-                    <h4 class="text-4xl">$25</h4>
+                    <h4 class="text-4xl">$<span id="total-balance">250</span> </h4>
                 </div>
             </div>
         </section>
