--- a/bank.html
+++ b/bank.html
@@ -18,15 +18,15 @@
             <div class="grid grid-cols-3 gap-4">
                 <div class="bg-blue-400 px-8 py-4 rounded text-center font-bold text-white">
                     <h3 class="text-2xl">Deposit</h3>
-                    <h4 class="text-4xl">$<span id="deposit-total">00</span> </h4>
+                    <h4 class="text-4xl">$<span id="deposit-total">00</span></h4>
                 </div>
                 <div class="bg-rose-400 px-8 py-4 rounded text-center font-bold text-white">
                     <h3 class="text-2xl">Withdeaw</h3>
-                    <h4 class="text-4xl">$25</h4>
+                    <h4 class="text-4xl">$<span id="withdraw">25</span></h4>
                 </div>
                 <div class="bg-teal-400 px-8 py-4 rounded text-center font-bold text-white">
                     <h3 class="text-2xl">Balance</h3>
-                    <h4 class="text-4xl">$<span id="total-balance">250</span> </h4>
+                    <h4 class="text-4xl">$<span id="total-balance">250</span></h4>
                 </div>
             </div>
         </section>
